unsafe-tools classes were incorrectly compiled in Java 11 bytecode